changes in sbcl-0.9.1 relative to sbcl-0.9.0:
  * fixed cross-compiler leakages that prevented building a 32-bit
    target with a 64-bit host compiler.
  * contrib improvement: implement SB-POSIX:MKSTEMP (Yannick Gingras)
  * optimization: There's now a fast-path for fixnum arguments in the
    generic subtraction routines on x86/x86-64. (Thanks to Lutz Euler)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** the type-error signalled from WARN has a filled-in DATUM slot.
    ** the type-error required when a stream is not associated with
       a file has the stream as its datum.
    ** type-errors on single-floats on x86-64 no longer have 
       :INVALID-OBJECT as the datum

changes in sbcl-0.9.0 relative to sbcl-0.8.21:
  * incompatible change: the --noprogrammer option, deprecated since
    version 0.7.5, has been removed.  Please use the equivalent
    --disable-debugger option instead.
  * incompatible change: finalizers and *AFTER-GC-HOOKS* are now run with
    interrupts enabled.
  * incompatible change: support for *BEFORE-GC-HOOKS* (that have been
    inoperational for a while now) has been completely removed.
  * null lexical environments are now printed as #<NULL-LEXENV>, 
    significantly reducing the amount of clutter in typical backtraces.
  * documentation on weak pointers, finalization, and after GC hooks
    has been added to the manual.
  * optimization: REPLACE on declared (UNSIGNED-BYTE 8) vectors, as well
    as other specialized array types, is much faster.  SUBSEQ and
    COPY-SEQ on such arrays have also been sped up.
  * optimization: EQL is now more efficient when at least other argument 
    is known to be of type (OR FIXNUM (NOT NUMBER)).
  * fixed bug: the runtime is now less vulnerable to changes in the
    size of the SBCL object on OS X, and virtual memory is reserved for
    all spaces that need to be at a fixed address.
  * fixed bug: finalizers are now thread-safe. (thanks to Gabor Mellis)